// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Snapshot Testing Plp getInitialProps 1`] = `undefined`;

exports[`With Snapshot Testing Plp page shows "mf.swhurl.com" H1 1`] = `
<DocumentFragment>
  .c7 {
  color: black;
  padding: 5px 10px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  font-weight: bold;
}

.c7:hover {
  color: #f00;
}

.c7:visited {
  color: black;
}

.c6 {
  font-weight: bold;
  text-transform: capitalize;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c1 {
  text-align: center;
  text-transform: uppercase;
  width: 33%;
}

.c3 {
  padding: 0 10px;
}

.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  font-weight: normal;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
  font-weight: bold;
}

.c8 {
  border: 1px solid #000;
  margin: 0;
}

.c9 {
  width: 100%;
}

.c10 {
  width: 100%;
  float: left;
}

.c11 {
  width: 100%;
  margin: 0 auto;
}

.c12 {
  text-align: center;
  margin-bottom: 20px;
}

@media only screen and (max-width:480px) {
  .c7 {
    padding: 5px;
  }
}

@media only screen and (min-width:641px) {
  .c9 {
    display: inline-block;
    text-align: center;
  }
}

@media only screen and (min-width:641px) {
  .c10 {
    width: 44%;
    display: inline-block;
    padding: 10px 3% 0 3%;
  }
}

@media only screen and (max-width:320px) {
  .c11 {
    max-width: 320px;
  }
}

@media only screen and (min-width:641px) {
  .c13 {
    width: 50%;
    display: inline-block;
  }
}

<div>
    <nav>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <a
            class="c2"
            href="/mens"
          >
            Men
          </a>
        </div>
        <div
          class="c3"
        >
          <h1>
            <a
              class="c2"
              href="/"
            >
              MATCHESFASHION
            </a>
          </h1>
        </div>
        <div
          class="c1"
        >
          <a
            class="c4"
            href="/womens"
          >
            Women
          </a>
        </div>
      </div>
    </nav>
    <nav
      class="c5"
    >
      <div
        class="c6"
      />
      <a
        class="c7"
        href="/womens/shop/accessories"
      >
        Accessories
      </a>
      <a
        class="c7"
        href="/womens/shop/bags"
      >
        Bags
      </a>
      <a
        class="c7"
        href="/womens/shop/clothing"
      >
        Clothing
      </a>
      <a
        class="c7"
        href="/womens/shop/shoes"
      >
        Shoes
      </a>
      <a
        class="c7"
        href="/womens/shop/homeware"
      >
        Homeware
      </a>
      <a
        class="c7"
        href="/womens/sale"
      >
        Sale
      </a>
    </nav>
    <hr
      class="c8"
    />
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="react-swipe-container carousel"
          style="overflow: hidden; visibility: visible; position: relative;"
        >
          <div
            style="overflow: hidden; position: relative; width: 0px;"
          >
            <div
              data-index="0"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c11"
                src="//assetsprx.matchesfashion.com/img/product/1247661_1_large.jpg"
              />
            </div>
            <div
              data-index="1"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c11"
                src="//assetsprx.matchesfashion.com/img/product/1247661_2_large.jpg"
              />
            </div>
            <div
              data-index="2"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c11"
                src="//assetsprx.matchesfashion.com/img/product/1247661_3_large.jpg"
              />
            </div>
            <div
              data-index="3"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c11"
                src="//assetsprx.matchesfashion.com/img/product/1247661_4_large.jpg"
              />
            </div>
            <div
              data-index="4"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c11"
                src="//assetsprx.matchesfashion.com/img/product/1247661_5_large.jpg"
              />
            </div>
          </div>
        </div>
        <noscript />
        <div
          class="c12"
        >
          <button>
            Previous
          </button>
          <button>
            Next
          </button>
        </div>
      </div>
      <div
        class="c13"
      >
        <h2>
          Bottega Veneta
        </h2>
        <h3>
          Intrecciato leather cardholder
        </h3>
        <p>
          £265
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`With Snapshot Testing Plp page shows "mf.swhurl.com" H1 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -97,11 +97,11 @@
            <div
              style=\\"overflow: hidden; position: relative; width: 0px;\\"
            >
              <div
                data-index=\\"0\\"
-               style=\\"float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);\\"
+               style=\\"float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 300ms; webkit-transition-duration: 300ms; webkit-transform: translate(NaNpx,0)translateZ(0);\\"
              >
                <img
                  alt=\\"Intrecciato leather cardholder\\"
                  class=\\"sc-fzoLsD fgcLqO\\"
                  src=\\"//assetsprx.matchesfashion.com/img/product/1247661_1_large.jpg\\""
`;

exports[`With Snapshot Testing Plp page shows "mf.swhurl.com" H1 3`] = `
Object {
  Symbol(SameObject caches): Object {
    "childNodes": NodeList [
      <div>
        <nav>
          <div
            class="sc-AxhCb ehLzjf"
          >
            <div
              class="sc-AxhUy ktROhf"
            >
              <a
                class="sc-AxheI fJvjhW"
                href="/mens"
              >
                Men
              </a>
            </div>
            <div
              class="sc-AxgMl WgHts"
            >
              <h1>
                <a
                  class="sc-AxheI fJvjhW"
                  href="/"
                >
                  MATCHESFASHION
                </a>
              </h1>
            </div>
            <div
              class="sc-AxhUy ktROhf"
            >
              <a
                class="sc-AxheI lgdTfg"
                href="/womens"
              >
                Women
              </a>
            </div>
          </div>
        </nav>
        <nav
          class="sc-AxiKw jdEnaj"
        >
          <div
            class="sc-AxirZ btnOEr"
          />
          <a
            class="sc-AxjAm gUxNoH"
            href="/womens/shop/accessories"
          >
            Accessories
          </a>
          <a
            class="sc-AxjAm gUxNoH"
            href="/womens/shop/bags"
          >
            Bags
          </a>
          <a
            class="sc-AxjAm gUxNoH"
            href="/womens/shop/clothing"
          >
            Clothing
          </a>
          <a
            class="sc-AxjAm gUxNoH"
            href="/womens/shop/shoes"
          >
            Shoes
          </a>
          <a
            class="sc-AxjAm gUxNoH"
            href="/womens/shop/homeware"
          >
            Homeware
          </a>
          <a
            class="sc-AxjAm gUxNoH"
            href="/womens/sale"
          >
            Sale
          </a>
        </nav>
        <hr
          class="sc-Axmtr hnOHfr"
        />
        <div
          class="sc-AxmLO hFHDnP"
        >
          <div
            class="sc-fzozJi hxUOAo"
          >
            <div
              class="react-swipe-container carousel"
              style="overflow: hidden; visibility: visible; position: relative;"
            >
              <div
                style="overflow: hidden; position: relative; width: 0px;"
              >
                <div
                  data-index="0"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-fzoLsD fgcLqO"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_1_large.jpg"
                  />
                </div>
                <div
                  data-index="1"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-fzoLsD fgcLqO"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_2_large.jpg"
                  />
                </div>
                <div
                  data-index="2"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-fzoLsD fgcLqO"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_3_large.jpg"
                  />
                </div>
                <div
                  data-index="3"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-fzoLsD fgcLqO"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_4_large.jpg"
                  />
                </div>
                <div
                  data-index="4"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-fzoLsD fgcLqO"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_5_large.jpg"
                  />
                </div>
              </div>
            </div>
            <noscript />
            <div
              class="sc-fzplWN bHIVxF"
            >
              <button>
                Previous
              </button>
              <button>
                Next
              </button>
            </div>
          </div>
          <div
            class="sc-fzpans kmebAB"
          >
            <h2>
              Bottega Veneta
            </h2>
            <h3>
              Intrecciato leather cardholder
            </h3>
            <p>
              £265
            </p>
          </div>
        </div>
      </div>,
    ],
  },
}
`;
